# gimgtools

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  gimgch.c  gimgchcodepage.c  makefile.nmake  sf_lbl.c
